# InitDocs

./: .gitignore  initdocs.spec  license  makefile  pyproject.toml  readme.md
.github/workflows/: _gh-pages-v1.yml  _gh-pages-v2.yml  _self-hosted.yml
src/: initdocs.py
src/template/: docker-compose.yaml  dockerfile  generate_pdf.sh  mkdocs.yml  readme.md  requirements.txt
src/template/docs/: index.md
src/template/docs/_internal/stylesheets/: extra.css
src/template/docs/section1.initdocs/: .pages  index.md
src/template/pages/: index.md
src/template/pages/_internal/templates/: custom_banner.tpl  custom_cover_page.tpl
src/template/pages/section1.initdocs/: index.md
