[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "InitDocs"
version = "1.1.5"
authors = [{name = "Martin Johannes Nilsen", email = "martinjnilsen@gmail.com"}]
description = "A command line tool for initializing documentation projects based on MkDocs."
readme = "readme.md"
#license = {text = "MIT"}
keywords = ["documentation", "markdown", "cli", "template", "python", "mkdocs"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "questionary>=2.0.1,<3.0.0",
    "ruamel.yaml==0.18.6",
    "ruamel.yaml.string==0.1.1",
]

[project.optional-dependencies]
build = [
    "build>=1.1.1,<2.0.0", 
    "pyinstaller>=6.5.0,<7.0.0",
]


[project.urls]
documentation = "https://initdocs.mjntech.dev/"  # Optional: documentation URL
repository = "https://github.com/MartinJohannesNilsen/InitDocs/"  # Optional: repository URL
# homepage = ""  # Optional: homepage URL